# py_superhero_api

./: .gitignore  README.md  pyproject.toml  requirements.txt
superheroes/: app.py  db.py  hero_api.py  main.py  setup.py
superheroes/utils/: api_models.py  db.py  hero_api.py  parser.py
