[tool.poetry]
name = "superheroes"
version = "0.1.0"
description = "Basic API with Endpoints to connect to the superhero-api"
authors = ["Sushena Jammi"]

[tool.poetry.scripts]
health_check = "superheroes.app:health_check"
setup_db = "superheroes.app:setup_db"
load_data_from_api = "superheroes.app:load_data_from_api"
fill_db = "superheroes.app:fill_db"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.1.2"
SQLAlchemy = "^1.4.38"
SQLAlchemy-Utils = "^0.38.2"
psycopg2-binary = "^2.9.3"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
