[tool.poetry]
name = "superheroes"
version = "1.0.0"
description = "Basic API with Endpoints to connect to the superhero-api"
authors = ["Sushena Jammi"]

[tool.poetry.scripts]
health_check = "superheroes.setup:health_check"
setup = "superheroes.setup:setup"
start = "superheroes.main:start"

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.38"
SQLAlchemy-Utils = "^0.38.2"
psycopg2-binary = "^2.9.3"
requests = "^2.28.0"
fastapi = "^0.78.0"
uvicorn = "^0.18.1"
pydantic-sqlalchemy = "^0.0.9"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
